# crossbridge

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  allowed_signers  crossbridge.toml.example  default.nix  heartbeat.json  hub.json  shell.nix  state.json
.claude/: settings.json
.claude/hooks/: crosslink_config.py  heartbeat.py  post-edit-check.py  pre-web-check.py  prompt-guard.py  session-start.py  work-check.py
.crosslink/: .gitignore  hook-config.json
.crosslink/rules/: c.md  cpp.md  csharp.md  elixir-phoenix.md  elixir.md  global.md  go.md  java.md  javascript-react.md  javascript.md  knowledge.md  kotlin.md  odin.md  php.md  python.md  quality.md  rigor.md  ruby.md  rust.md  sanitize-patterns.txt  scala.md  shell.md  swift.md  tracking-normal.md  tracking-relaxed.md  tracking-strict.md  typescript-react.md  web.md  zig.md
.design/: client.md  client.pipeline.json  e2e-integration-test.md  e2e-integration-test.pipeline.json  overview.md  protocol.md  protocol.pipeline.json  server.md  server.pipeline.json  supervisor.md  supervisor.pipeline.json  swarm-plan.md
.github/workflows/: ci.yml
checkpoint/: skew_warnings.json  state.json
crossbridge/: Cargo.toml  README.md
crossbridge-client/: Cargo.toml  README.md
crossbridge-client/src/: labels.rs  lib.rs  main.rs  peers.rs  slug.rs
crossbridge-client/tests/: end_to_end.rs
crossbridge-e2e/: Cargo.toml  README.md
crossbridge-e2e/src/: lib.rs
crossbridge-e2e/tests/: round_trip.rs
crossbridge-e2e/tests/common/: mod.rs
crossbridge-protocol/: Cargo.toml  README.md
crossbridge-protocol/src/: framing.rs  lib.rs  tests.rs
crossbridge-server/: Cargo.toml  README.md
crossbridge-server/src/: attachment.rs  handler.rs  lib.rs  listeners.rs  main.rs  paths.rs  run.rs  slug.rs  supervisor.rs  test_util.rs
crossbridge-server/tests/: end_to_end.rs  oversized_frame.rs
crossbridge-server/tests/common/: mod.rs
crossbridge-supervisor/: Cargo.toml  README.md
crossbridge-supervisor/src/: lib.rs  main.rs
crossbridge-supervisor/tests/: integration.rs
crossbridge/src/: config.rs  main.rs  route.rs
heartbeats/: 2ZD1.json  4wFJ.json  5Upn.json  9UbB.json  BDkr.json  BJNi.json  ChG1.json  DTBq.json  DiI0.json  FYpC.json  GOqH.json  JlaD.json  Kklh.json  MIYh.json  O22C.json  W0Nm.json  WuVM.json  bPQu.json  desktop.json  goST.json  hi0b.json  k2zc.json  lRhe.json  mtSP.json  poDf.json  qi3w.json  tEc5.json  uRts.json  ur0W.json  uz9x.json  va8e.json
issues/0ca05888-bfd1-4d7c-a708-bb54edb58ff6/: issue.json
issues/120b5168-4b2c-441d-ac0b-dae4abee30ff/: issue.json
issues/1a45becd-585d-415f-adf4-77efca7a9dd4/: issue.json
issues/1acd3f05-0f12-433f-84ab-9e84b9294249/: issue.json
issues/1ad3368f-d913-4ec0-9a63-c938204e217f/: issue.json
issues/1b7bc2e1-2f14-4c9b-bdd6-4efe04a88ad6/: issue.json
issues/1bfe6fbb-416e-4431-843d-d2bf75b4138c/: issue.json
issues/248b66ed-426d-4d68-97f3-74328bcc5a6a/: issue.json
issues/24cc274c-4e6a-464a-a181-4b3b550a6bc4/: issue.json
issues/27a6b90c-d8c2-4117-b450-1615b18f4a28/: issue.json
issues/2cb00705-b1b3-4929-9722-d8bbf56bbe09/: issue.json
issues/3fda75ff-7247-4989-b69d-06ecf0bbbc74/: issue.json
issues/427dd451-cf9d-48a7-a3b7-93c0565ad214/: issue.json
issues/462c823f-5dda-4cee-ba77-5f126fb36c48/: issue.json
issues/53d00b7b-9953-491c-8a26-e0ea988a2ca8/: issue.json
issues/56efbadd-65ee-4dd1-9729-d503ce639cba/: issue.json
issues/5a6329c6-a9b7-424f-b45a-217984a55832/: issue.json
issues/5e7ba92f-f72e-440b-a9f3-eb3ee122ba2b/: issue.json
issues/63e37641-f3e2-43e3-8e8a-8a55fab810f4/: issue.json
issues/6ae40c86-0621-4461-aaf8-eaef6d4e0e67/: issue.json
issues/740c91b6-a927-4bac-89a3-26d0104e9f17/: issue.json
issues/7957ce48-31b8-4a13-9664-6a5d1de8a4e5/: issue.json
issues/797ac870-1ee1-491c-afce-1b6a3a7f42f4/: issue.json
issues/7ace7a00-8e76-4e35-a032-9c829cec1c9f/: issue.json
issues/7bca6069-e60b-41fc-a656-f900b4eb35b0/: issue.json
issues/7f318491-f2fe-47f0-8653-94cc5b4623e4/: issue.json
issues/8a515bec-3b0e-4cac-935a-a889c8c40b52/: issue.json
issues/943afed8-5c2b-4555-8ad3-8c9645b0ebe4/: issue.json
issues/97244c12-e2c3-4768-a1dd-00cbfbd84929/: issue.json
issues/9c3350cb-4fbf-4f2b-910c-f78718a97d98/: issue.json
issues/9c3cc507-f4df-4180-904b-0f6167228f00/: issue.json
issues/a0ecb2cb-2218-4b4b-8133-648cbcb835db/: issue.json
issues/a83c1fb3-70de-4710-9527-e19aaafc490d/: issue.json
issues/b31a00cd-e0d4-46bf-a7a1-c192aba39d05/: issue.json
issues/b986c5ae-6aca-48a6-9cb1-53cbf1e02066/: issue.json
issues/bfe3c775-e495-4235-a00f-542da03a5cb3/: issue.json
issues/c326e492-c0ad-4577-b092-86adbe2e3cbb/: issue.json
issues/c3dacb91-e367-4443-a3e5-e0c94bdfa066/: issue.json
issues/c6ad08b7-cf3c-465c-81f8-64e3b656dabd/: issue.json
issues/c7e7fa6b-7ac1-4f30-9785-323fb35260c0/: issue.json
issues/cca6b353-8177-4667-a558-572dde253fd4/: issue.json
issues/ce1cc28c-59e5-400e-a3b3-a8c8925d3e19/: issue.json
issues/cf5d466a-817f-43dc-8a87-8e222033649a/: issue.json
issues/d1501151-4bb6-456e-b07c-59a7b5eddf47/: issue.json
issues/e52c6819-b984-4b99-a1d3-fb91671747d0/: issue.json
issues/fc80af35-c886-4380-bbc7-b91cfcd0a0a3/: issue.json
issues/fd2940b5-1fd3-4a7c-aa4b-9c612025ba88/: issue.json
locks/: -1.json  -2.json  -3.json  -4.json  -5.json  12.json  17.json  20.json  23.json  25.json  33.json  34.json  42.json  45.json  5.json  6.json  7.json  8.json
meta/: bootstrap.json  counters.json
nix/: direnvrc.sh  module.nix
npins/: sources.json
script/: crossbridge-answer  crossbridge-request
skill/: crossbridge.md
skill/crossbridge/: SKILL.md
src/: config.rs  route.rs
swarm/: active.json
swarm/1a2e7538-5150-47d4-8edb-0e7b7f2104b7/: plan.json
swarm/33f79716-fcb3-4f22-8e1b-7adf00260a9a/: plan.json
trust/: allowed_signers
trust/keys/: 0jgu.pub  1t4h.pub  2ZD1.pub  4McQ.pub  4wFJ.pub  9UbB.pub  B5Rw.pub  BDkr.pub  BJNi.pub  ChG1.pub  DTBq.pub  DiI0.pub  GOqH.pub  IS4n-NjYw-close-inherited-file-descriptors-fd-3-at-crossbridge.pub  JlaD.pub  Kklh.pub  MIYh.pub  O22C.pub  OktZ.pub  W0Nm.pub  WXOt.pub  (+17 more)
(+90 files in other folders)
