[workspace]
resolver = "2"
members = [
    "crossbridge",
    "crossbridge-client",
    "crossbridge-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }
tokio = { version = "1", default-features = false }
thiserror = "2"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
crosslink = { git = "https://github.com/forecast-bio/crosslink.git", rev = "12eb7b917e9ef726f40eb2f9b36cf87fa38efa4d" }
