[workspace]
resolver = "2"
members = [
    "crossbridge-client",
    "crossbridge-e2e",
    "crossbridge-protocol",
    "crossbridge-supervisor",
    "crossbridge-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["use-std"] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
crosslink = { git = "https://github.com/forecast-bio/crosslink.git", rev = "12eb7b917e9ef726f40eb2f9b36cf87fa38efa4d" }
