[package]
name = "crossbridge-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workspace-level end-to-end integration tests exercising real supervisor + server + client binaries"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
crossbridge-protocol = { path = "../crossbridge-protocol" }
crossbridge-supervisor = { path = "../crossbridge-supervisor" }
crossbridge-server = { path = "../crossbridge-server" }
crossbridge-client = { path = "../crossbridge-client" }
crosslink.workspace = true
tempfile.workspace = true
