[package]
name = "crossbridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-repo crossbridge server: registers with supervisor, owns one repo's crosslink DB, accepts SubmitIssue/SubmitAnswer over per-peer Unix sockets."

[[bin]]
name = "crossbridge-server"
path = "src/main.rs"

[dependencies]
crossbridge-protocol = { path = "../crossbridge-protocol" }
crosslink.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "signal", "time", "sync"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "signal", "time", "sync"] }
tokio-util.workspace = true
