[package]
name = "crossbridge-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-host supervisor coordinating peer-group socket topology for crossbridge"

[[bin]]
name = "crossbridge-supervisor"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
crossbridge-protocol = { path = "../crossbridge-protocol" }
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "sync", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "sync", "time", "signal"] }
