[package]
name = "crossbridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-project coordination bridge for crosslink repositories"

[[bin]]
name = "crossbridge"
path = "src/main.rs"

[dependencies]
crosslink.workspace = true
toml.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
